# rosbag-resurrector

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LAUNCH_BLOCKERS.md  LICENSE  MANIFEST.in  PLAN.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: backfill-latest-assets.yml  build-packages.yml  ci.yml  publish-pypi.yml
docs/: usability_review.md
examples/: 01_bag_frame_basics.py  02_health_checks.py  03_math_transforms.py  03_multi_stream_sync.py  04_cross_bag_overlay.py  04_image_video_export.py  05_dashboard_walkthrough.py  05_ml_export_formats.py  06_bookmarks_via_api.py  06_index_search_query_dsl.py  07_jupyter_export.py  07_semantic_frame_search.py  08_datasets_versioning.py  08_polars_lazy_filter.py  09_plotjuggler_bridge.py  11_density_ribbon.py  12_trim_to_mcap.py  14_cross_bag_overlay.py  18_polars_lazy_filter.py  README.md  _common.py
marketing/: launch_plan.md
packaging/: Makefile  build_vision.py  pyarmor_config.py  record_demo.sh  resurrector.spec
packaging/macos/: Info.plist  create_dmg.sh
packaging/ubuntu/: build_deb.sh  postinst.sh
resurrector/: __init__.py  logging_config.py
resurrector/bridge/: __init__.py  buffer.py  live.py  playback.py  protocol.py  server.py
resurrector/bridge/web/: index.html  viewer.js
resurrector/cli/: doctor.py  formatters.py  main.py
resurrector/core/: bag_frame.py  cross_bag.py  dataset.py  dataset_readme.py  downsample.py  exceptions.py  export.py  query.py  streaming.py  sync.py  topic_groups.py  transforms.py  trim.py  vision.py
resurrector/dashboard/: api.py  cache.py
resurrector/dashboard/app/: index.html  package-lock.json  package.json  vite.config.ts
resurrector/dashboard/app/src/: App.tsx  ErrorToast.tsx  api.ts
resurrector/dashboard/app/src/components/: BookmarksPanel.tsx  DensityRibbon.tsx  ExportDialog.tsx  HealthBadge.tsx  ImageViewer.tsx  JupyterButton.tsx  SyncView.tsx  Timeline.tsx  TopicPlot.tsx  TransformEditor.tsx  TrimExportPopover.tsx
resurrector/dashboard/app/src/pages/: Bridge.tsx  Compare.tsx  CompareRuns.tsx  Datasets.tsx  Explorer.tsx  Health.tsx  Help.tsx  Library.tsx  Search.tsx
resurrector/demo/: __init__.py  sample_bag.py
resurrector/ingest/: convert.py  density.py  frame_index.py  health_check.py  indexer.py  migrations.py  parser.py  scanner.py
tests/: test_api.py  test_api_v030.py  test_api_v040.py  test_bag_frame.py  test_bridge_buffer.py  test_bridge_playback.py  test_bridge_protocol.py  test_bridge_server.py  test_cdr_safety.py  test_cli.py  test_compressed_image.py  test_convert.py  test_cross_bag.py  test_dataset.py  test_density.py  test_doctor.py  test_downsample.py  test_export.py  test_export_frames.py  test_export_ml.py  test_export_v040.py  test_frame_index.py  test_frame_offsets_annotations.py  test_health.py  test_health_config.py  test_health_streaming.py  test_indexer_concurrency.py  test_ingest.py  test_integration.py  test_ipc_cache.py  test_large_topic_guard.py  test_migrations.py  test_python_api_smoke.py  test_stream_bucketed_minmax.py  test_streaming.py  test_streaming_oom.py  test_sync.py  test_sync_streaming.py  test_topic_groups.py  test_transforms_v040.py  (+2 more)
tests/fixtures/: generate_test_bags.py  sync_fixtures.py
tests/fixtures/ros2_dir_bag/: metadata.yaml
