[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag-resurrector"
version = "0.1.0"
description = "Stop letting your rosbag data rot. A pandas-like analysis tool for robotics bag files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RosBag Resurrector Contributors"},
]
keywords = ["ros", "rosbag", "mcap", "robotics", "data-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcap>=1.1.0",
    "mcap-ros2-support>=0.5.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.10.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "plotly>=5.18.0",
    "h5py>=3.10.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
ros1 = ["rosbags>=0.9.0"]
all-exports = ["zarr>=2.16.0", "tensorflow-datasets>=4.9.0"]
vision-lite = ["Pillow>=10.0.0", "opencv-python-headless>=4.8.0"]
vision = ["Pillow>=10.0.0", "opencv-python-headless>=4.8.0", "sentence-transformers>=2.2.0"]
vision-openai = ["Pillow>=10.0.0", "opencv-python-headless>=4.8.0", "openai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "Pillow>=10.0.0"]
watch = ["watchdog>=4.0.0"]

[project.scripts]
resurrector = "resurrector.cli.main:app"

[tool.setuptools.packages.find]
include = ["resurrector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
