[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag-resurrector"
version = "0.4.0"
description = "Stop letting your rosbag data rot. A pandas-like analysis tool for robotics bag files — no ROS install required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RosBag Resurrector Contributors"},
]
keywords = [
    "ros", "ros2", "rosbag", "mcap", "robotics", "data-analysis",
    "polars", "pandas", "plotjuggler", "machine-learning", "rlds", "lerobot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcap>=1.1.0",
    "mcap-ros2-support>=0.5.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.10.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "plotly>=5.18.0",
    "h5py>=3.10.0",
    "pyarrow>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/vikramnagashoka/rosbag-resurrector"
Documentation = "https://github.com/vikramnagashoka/rosbag-resurrector#readme"
Repository = "https://github.com/vikramnagashoka/rosbag-resurrector"
Issues = "https://github.com/vikramnagashoka/rosbag-resurrector/issues"
Changelog = "https://github.com/vikramnagashoka/rosbag-resurrector/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ros1 = ["rosbags>=0.9.0"]
all-exports = ["zarr>=2.16.0", "tensorflow-datasets>=4.9.0"]
vision-lite = ["Pillow>=10.0.0", "opencv-python-headless>=4.8.0"]
vision = ["Pillow>=10.0.0", "opencv-python-headless>=4.8.0", "sentence-transformers>=2.2.0"]
vision-openai = ["Pillow>=10.0.0", "opencv-python-headless>=4.8.0", "openai>=1.0.0"]
bridge-live = ["rclpy"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "Pillow>=10.0.0", "websockets>=12.0", "psutil>=5.9.0"]
packaging = ["pyinstaller>=6.0.0", "pyarmor>=8.0.0"]
watch = ["watchdog>=4.0.0"]

[project.scripts]
resurrector = "resurrector.cli.main:app"

[tool.setuptools.packages.find]
include = ["resurrector*"]

# Ship non-Python assets in the wheel: the React dashboard bundle and
# the bridge's standalone HTML/JS viewer. Without this glob the wheel
# installs the Python source but loading the dashboard 404s on `/`.
[tool.setuptools.package-data]
"resurrector.dashboard.static" = ["**/*"]
"resurrector.bridge.web" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Exclude `slow` from the default pytest run so PRs stay fast.
# Run them via `pytest -m slow` (CI's wheel-smoke job does this).
addopts = "-m 'not slow'"
markers = [
    "smoke: end-to-end smoke tests intended for the wheel-install CI job",
    "slow: opt-in slow tests (memory regression, large synthetic bags); run with `pytest -m slow`",
]
